# NotesDrive-Server

./: CMakeLists.txt  NotesDrive-Server.kdev4  README.md  clientmanager.cpp  clientmanager.h  filemanager.cpp  filemanager.h  server.cpp  server.h
.kdev4/: NotesDrive-Server.kdev4
authentication/: yubikeyauth.cpp  yubikeyauth.h
encryption/: rsa-encryption.cpp  rsa-encryption.h  utils-encryption.cpp  utils-encryption.h
hashing/: sha3-hashing.cpp  sha3-hashing.h
